--- a/services.html
+++ b/services.html
@@ -38,46 +38,34 @@
         <section class="lista-de-itens">
             <details>
                 <summary>Site</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
-                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
-                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
+                <p class="descricao-servicos">Sites personalizados de acordo com as necessidades e objetivos de sua empresa ou projeto. Utilizamos as tecnologias mais recentes para garantir um design moderno, responsivo e funcional.</p>
+                <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Blog</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
-                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
-                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
+                <p class="descricao-servicos">Criação de blog para empresas e profissionais que desejam compartilhar informações relevantes, notícias, artigos e conteúdo de interesse para seu público-alvo. Te ajudo a construir uma presença online sólida por meio de estratégias de conteúdo eficazes.</p>
+                <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Loja Virtual</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
-                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
-                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
+                <p class="descricao-servicos">Desenvolvimento de lojas virtuais completas e personalizadas, oferecendo uma experiência de compra online intuitiva e segura para seus clientes. Integrando sistemas de pagamento e gerenciamento de estoque, ajudamos você a expandir seus negócios no mercado digital.</p>
+                <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Landing Page</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
-                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
-                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
+                <p class="descricao-servicos">Landing pages otimizadas para conversão, com design atrativo e conteúdo persuasivo, visando capturar leads e aumentar as vendas dos seus produtos ou serviços.</p>
+                <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Página de Vendas</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
-                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
-                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
+                <p class="descricao-servicos">Páginas de vendas persuasivas e convincentes, projetadas para destacar os benefícios de seus produtos/serviços e incentivar os visitantes a realizar uma compra. Utilizando técnicas de copywriting e design para aumentar suas vendas online.</p>
+                <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
-            <details>
+            <!-- <details>
                 <summary>Consultoria</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
-                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
-                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
-                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
-            </details>
+                <p class="descricao-servicos">Oferecemos consultoria especializada em marketing digital, identificando oportunidades de crescimento, definindo estratégias eficazes e acompanhando o desempenho das campanhas para alcançar resultados sólidos e sustentáveis.</p>
+                <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
+            </details> -->
         </section>
     </main>
 
