acho que agora acabou

--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
         <section class="lista-de-itens">
             <details>
                 <summary>Site</summary>
-                <p class="descricao-servicos">Sites personalizados de acordo com as necessidades e objetivos de sua empresa ou projeto. Utilizamos as tecnologias mais recentes para garantir um design moderno, responsivo e funcional.</p>
+                <p class="descricao-servicos">Sites personalizados de acordo com as necessidades e objetivos de sua empresa ou projeto. Utilizando as tecnologias mais recentes para garantir um design moderno, responsivo e funcional.</p>
                 <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
             <details>
@@ -48,7 +48,7 @@
             </details>
             <details>
                 <summary>Loja Virtual</summary>
-                <p class="descricao-servicos">Desenvolvimento de lojas virtuais completas e personalizadas, oferecendo uma experiência de compra online intuitiva e segura para seus clientes. Integrando sistemas de pagamento e gerenciamento de estoque, ajudamos você a expandir seus negócios no mercado digital.</p>
+                <p class="descricao-servicos">Desenvolvimento de lojas virtuais completas e personalizadas, oferecendo uma experiência de compra online intuitiva e segura para seus clientes. Integrando sistemas de pagamento e gerenciamento de estoque, te ajudo a expandir seu negócio no mercado digital.</p>
                 <a class="link-orcamento" href="https://wa.me/5571986261219" target="_blank">Solicitar Orçamento</a>
             </details>
             <details>
