--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="logo-principal">
@@ -43,20 +45,42 @@
 
         <div class="coluna2">
             <p id="minha-jornada">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+                Descobri o universo do Design aos 17 anos, quando mergulhei no curso de Computação Gráfica da SAGA
+                durante o Ensino Médio. Desde então, a criação de websites sempre me encantou, embora minha jornada
+                tenha inicialmente se voltado para oportunidades empolgantes no campo do Design Gráfico.
                 <br>
                 <br>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+                Ao longo de uma década, acumulei valiosas experiências em estúdios de fotografia, empresas de
+                comunicação visual e gráficas. No entanto, foi ao dar os primeiros passos como profissional autônoma que
+                me vi abraçando também o desafio de colaborar com empresas especializadas em gerenciamento de redes
+                sociais.
                 <br>
                 <br>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+                Essa oportunidade me proporcionou a expertise em criação de conteúdo impactante para as plataformas
+                digitais, tornando-se mais uma habilidade que adicionei ao meu arsenal.
+                <br>
+                <br>
+                Nos últimos cinco anos, venho alternando entre gerenciamento estratégico de redes sociais, design focado
+                nessas plataformas e projetos esporádicos de branding e web design.
+                <br>
+                <br>
+                Ao final de 2022, decidi direcionar integralmente minha trajetória para o universo web.
+                <br>
+                <br>
+                Atualmente, meu maior objetivo é me destacar como Desenvolvedora Front-end. Embora esteja no início
+                dessa jornada, tenho plena convicção de que é minha verdadeira paixão.
+                <br>
+                <br>
+                Dedico meu tempo e esforço incansáveis para aprimorar minhas habilidades e me tornar uma profissional
+                excepcional em tudo o que faço.
             </p>
 
             <div class="coluna2b">
                 <div class="grupo1">
                     <h2 class="titulo">Certificações</h2>
                     <ul class="certificacoes">
-                        <li><strong>Pacote Adobe / Computação Gráfica</strong> BY Escola SAGA - School of Art end Game Animation</li>
+                        <li><strong>Pacote Adobe / Computação Gráfica</strong> BY Escola SAGA - School of Art end Game
+                            Animation</li>
                         <li><strong>Formação em Marketing Digital</strong> BY São Paulo Digital School</li>
                         <li><strong>Comunicação e Oratória</strong> BY Escola Conquer</li>
                         <li><strong>Reaprendizagem Criativa</strong> BY Murilo Gun</li>
@@ -65,7 +89,9 @@
                 </div>
                 <div class="grupo2">
                     <h2 class="titulo">Competências</h2>
-                    <p class="competencias">Design Sprint • UX • Inteligência Emocional • Design Thinking • CX • Lógica de Programação • Algoritmo • Organização • HTML • CSS • WordPress • Elementor • Git/Github • Ecommerce • Mídias Sociais</p>
+                    <p class="competencias">Design Sprint • UX • Inteligência Emocional • Design Thinking • CX • Lógica
+                        de Programação • Algoritmo • Organização • HTML • CSS • WordPress • Elementor • Git/Github •
+                        Ecommerce • Mídias Sociais</p>
                 </div>
             </div>
 
@@ -86,4 +112,5 @@
         </section>
     </main>
 </body>
+
 </html>
