--- a/links.html
+++ b/links.html
@@ -26,7 +26,7 @@
 
     <main class="lista-de-links">
         <section class="sessao-item">
-            <a href="#" target="_blank">
+            <a href="index.html" target="_blank">
                 <div class="conteudo-item">
                     <span>Meu Site</span>
                 </div>
@@ -39,13 +39,13 @@
                 </div>
             </a>
         </section>
-        <section class="sessao-item">
+        <!-- <section class="sessao-item">
             <a href="#" target="_blank">
                 <div class="conteudo-item">
                     <span>Sessão de consultoria de Marketing R$97</span>
                 </div>
             </a>
-        </section>
+        </section> -->
         <section class="sessao-item">
             <a href="https://www.behance.net/agatadesigner" target="_blank">
                 <div class="conteudo-item">
