--- a/works.html
+++ b/works.html
@@ -31,6 +31,17 @@
     </header>
     <main>
         <section class="portfolio-item">
+            <h3>Humberto de Oliveira</h3>
+            <img src="imagens/site-humberto-de-oliveira-1400px.jpg" alt="">
+            <div class="item-foto-links">
+                <img class="desktop-img" src="imagens/site-humberto-de-oliveira-1400px.jpg" alt="">
+                <div class="links-item-portfolio">
+                    <a href="https://humbertodeoliveira.com.br/" target="_blank">abrir</a>
+                    <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-item">
             <h3>Gabrife Seguros</h3>
             <img src="imagens/site-gabrife-mockup.jpg" alt="">
             <div class="item-foto-links">
