--- a/links.html
+++ b/links.html
@@ -33,7 +33,7 @@
             </a>
         </section>
         <section class="sessao-item">
-            <a href="https:wa.me/71986261219" target="_blank">
+            <a href="https://wa.me/71986261219" target="_blank">
                 <div class="conteudo-item">
                     <span>Fale Comigo</span>
                 </div>
