instagram link update

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <div id="foto-minha-jornada"></div>
             <div class="fale-comigo-desktop"><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></div>
             <section class="links-sociais-desktop">
-                <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+                <a href="https://www.instagram.com/agatacruz.web/" target="_blank">
                     <div class="instagram-id"></div>
                 </a>
                 <a href="mailto:agatacruzdesign@gmail.com">
@@ -103,7 +103,7 @@
         <div class="fale-comigo"><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></div>
 
         <section class="links-sociais">
-            <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+            <a href="https://www.instagram.com/agatacruz.web/" target="_blank">
                 <div class="instagram-id"></div>
             </a>
             <a href="mailto:agatacruzdesign@gmail.com">
