--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="item-lista"><a href="https://github.com/agatacrz/" target="_blank">GitHub</a></div>
             </section>
             <section class="links-sociais">
-                <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+                <a href="https://www.instagram.com/agatacruz.web/" target="_blank">
                     <div id="instagram-id"></div>
                 </a>
                 <a href="https://www.behance.net/agatadesigner" target="_blank">
