--- a/works.html
+++ b/works.html
@@ -77,7 +77,7 @@
     </main>
     <footer>
         <section class="links-sociais">
-            <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+            <a href="https://www.instagram.com/agatacruz.web/" target="_blank">
                 <div id="instagram-id"></div>
             </a>
             <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">
