--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
 
     <footer>
         <section class="links-sociais">
-            <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+            <a href="https://www.instagram.com/agatacruz.web/" target="_blank">
                 <div id="instagram-id"></div>
             </a>
             <a href="https://www.behance.net/agatadesigner" target="_blank">
